update conky & zsh configs

--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -76,7 +76,7 @@ ${template0 up enp0s20u2}
 {"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}${endif}${endif}
 
-# Memory: \uF30d \uF00A \uf233
+# Memory: \uF30d \uF00A \uf233 \uF3FE
 {"full_text":"\uF30d","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${memperc} < 30}
 	{"full_text":" ${memeasyfree}","color":"\#909737","separator":false,"separator_block_width":6},
@@ -100,7 +100,7 @@ ${if_match ${cpu cpu0} <= 100}
 	{"full_text":"${cpu cpu0}%","color":"\#924020","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}
 
-# Weather: \uF3b6
+# Weather: \uF3b6 \u376
 {"full_text":"\uF185","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${texeci 120 ~/.config/i3/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
 
@@ -138,7 +138,11 @@ ${endif}
 ${execi 10 ~/.config/i3/aria2c-stat.py }
 
 # Battery: \uf214 \uf0e7
-{"full_text":"\uF0e7","color":"\#949494","separator":false,"separator_block_width":6},
+${if_match ${execi 2 cat /sys/class/power_supply/AC0/online} == 1}
+	{"full_text":"\uF0e7","color":"\#949494","separator":false,"separator_block_width":6},
+${else}
+	{"full_text":"\uF214","color":"\#949494","separator":false,"separator_block_width":6},
+${endif}
 ${if_match ${battery_percent} < 30}
 	{"full_text":"${battery_percent}%","color":"\#924020","separator":false,"separator_block_width":6},
 ${else}
