update qutebrowser & conky config

--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -9,8 +9,9 @@ conky.config = {
 	override_utf8_locale = true,
 	format_human_readable = true,
 	use_xft = true,
+	if_ip_strictness = 'address',
 	template0 = [[
-${if_match ${\1speedf \2} > 0}
+${if_existing /proc/net/route \2}
 	${if_match ${\1speedf \2} < 1000}
 		{"full_text":"${\1speed \2}","color":"\\#909737","separator":false,"separator_block_width":6},
 	${else}
@@ -60,6 +61,7 @@ ${endif}${endif}${endif}
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
 ${template0 down enp9s0}
 ${template0 down wlp8s0}
+${template0 down wlp8s1}
 ${template0 down enp0s26u1u2}
 ${template0 down enp0s20u1}
 ${template0 down enp0s20u2}
@@ -70,6 +72,7 @@ ${endif}${endif}${endif}${endif}${endif}
 {"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},
 ${template0 up enp9s0}
 ${template0 up wlp8s0}
+${template0 up wlp8s1}
 ${template0 up enp0s26u1u2}
 ${template0 up enp0s20u1}
 ${template0 up enp0s20u2}
