update vim & qutebrowser & modprobed-db & systemd & curl configs

--- a/~/.config/modprobed-db.conf
+++ b/~/.config/modprobed-db.conf
@@ -1,12 +1,16 @@
-# For documentation, see the manpage for modprobed-db
-
-# Path where database will reside.
-DBPATH="/home/lejenome/.local/share"
+DBPATH="/home/lejenome/.local/share/"
 
 # Define the background of your terminal theme here.
+# A setting of dark will produce colors that nicely contrast a dark background.
+#  setting of light will produce colors that nicely contrast a light background.
 COLORS=dark
 #COLORS=light
 
+
+# Add modules in the ignore array that you do NOT want counted, for example modules that
+# get built or that are provided by another package.
+#
+# For Arch Linux, some examples are given below.
 IGNORE=(nvidia vboxdrv vboxnetflt vboxnetadp vboxpci lirc_dev lirc_i2c
 osscore oss_hdaudio oss_usb tp_smapi thinkpad_ec
 zavl znvpair zunicode zcommon zpios zfs spl splat)
