update asd & git & myrepos configs

--- a/etc/asd.conf
+++ b/etc/asd.conf
@@ -1,6 +1,25 @@
-WHATTOSYNC=( "/home/lejenome/.mpd" "/home/lejenome/mail" "/home/lejenome/.vimperator/info" )
-WHATTOSYNC+=( "/home/lejenome/.weechat" '/mnt/Others/git/dotfiles' "/home/lejenome/.local/share" )
-WHATTOSYNC+=( "/home/lejenome/.config" "/home/lejenome/.getmail" )
-WHATTOSYNC+=( "/home/lejenome/.nvim/bundle" )
+WHATTOSYNC=(
+	'/mnt/Others/git/dotfiles'
+	'/mnt/Others/git/oh-my-zsh'
+	'/mnt/Others/git/zsh-syntax-highlighting'
+	'/home/lejenome/.config'
+	## '/home/lejenome/.local'
+	'/home/lejenome/.local/share'
+	"/usr/lib/python3.5/__pycache__"
+	'/home/lejenome/.getmail'
+	'/home/lejenome/mail'
+	# '/home/lejenome/.vimperator/info'
+	# '/home/lejenome/.weechat'
+	'/home/lejenome/.vim'
+)
 
-VOLATILE="/dev/shm"
+EXCLUDE_FILES=(
+	".git"
+	".hg"
+)
+
+USE_OVERLAYFS="yes"
+
+VOLATILE="/tmp"
+
+USE_BACKUPS="yes"
