update urxvt & qutebrowser & zsh & asd configs

--- a/etc/asd.conf
+++ b/etc/asd.conf
@@ -11,11 +11,14 @@ WHATTOSYNC=(
 	# '/home/lejenome/.vimperator/info'
 	# '/home/lejenome/.weechat'
 	'/home/lejenome/.vim'
+	'/mnt/Others/git/bin'
+	'/mnt/Others/git/my_scripts'
 )
 
 EXCLUDE_FILES=(
 	".git"
 	".hg"
+	".tox"
 )
 
 USE_OVERLAYFS="yes"
