--- a/~/.config/qutebrowser/keys.conf
+++ b/~/.config/qutebrowser/keys.conf
@@ -40,7 +40,7 @@
 
 [!normal]
 
-clear-keychain ;; leave-mode
+leave-mode
     <escape>
     <ctrl-[>
 
@@ -225,34 +225,34 @@ yank
 yank -s
     yY
 
-yank -t
+yank title
     yt
 
-yank -ts
+yank title -s
     yT
 
-yank -d
+yank domain
     yd
 
-yank -ds
+yank domain -s
     yD
 
-paste
+open {clipboard}
     pp
 
 paste -s
     pP
 
-paste -t
+open -t {clipboard}
     Pp
 
-paste -ts
+open -t {primary}
     PP
 
-paste -w
+open -w {clipboard}
     wp
 
-paste -ws
+open -w {primary}
     wP
 
 quickmark-save
@@ -426,10 +426,10 @@ enter-mode set_mark
 enter-mode jump_mark
     '
 
-yank -p
+yank pretty-url
     yp
 
-yank -ps
+yank pretty-url -s
     yP
 
 hint inputs
@@ -483,8 +483,7 @@ hint all tab-bg
 # Useful hidden commands to map in this section:
 #  * `command-history-prev`: Switch to previous command in history.
 #  * `command-history-next`: Switch to next command in history.
-#  * `completion-item-prev`: Select previous item in completion.
-#  * `completion-item-next`: Select next item in completion.
+#  * `completion-item-focus`: Select another item in completion.
 #  * `command-accept`: Execute the command currently in the commandline.
 
 command-history-prev
@@ -493,11 +492,11 @@ command-history-prev
 command-history-next
     <ctrl-n>
 
-completion-item-prev
+completion-item-focus prev
     <shift-tab>
     <up>
 
-completion-item-next
+completion-item-focus next
     <tab>
     <down>
 
@@ -570,6 +569,8 @@ rl-kill-word
 
 rl-unix-word-rubout
     <ctrl-w>
+
+rl-backward-kill-word
     <alt-backspace>
 
 rl-yank
@@ -638,10 +639,10 @@ move-to-start-of-document
 move-to-end-of-document
     G
 
-yank-selected -p
+yank selection -s
     Y
 
-yank-selected
+yank selection
     y
     <return>
     <ctrl-m>
