--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -34,7 +34,7 @@
 #         smart: Search case-sensitively if there are capital chars
 #     Default: smart
 #
-# startpage (List):
+# startpage (List of String):
 #     The default page(s) to open at the start, separated by commas.
 #     Default: https://duckduckgo.com
 #
@@ -125,6 +125,15 @@
 #         window: Open in a new window.
 #     Default: tab
 #
+# new-instance-open-target.window (String):
+#     Which window to choose when opening links as new tabs.
+#         last-opened: Open new tabs in the last opened window.
+#         last-focused: Open new tabs in the most recently focused
+#     window.
+#         last-visible: Open new tabs in the most recently visible
+#     window.
+#     Default: last-focused
+#
 # log-javascript-console (String):
 #     How to log javascript console messages.
 #         none: Don't log messages.
@@ -162,6 +171,7 @@ xss-auditing = false
 site-specific-quirks = true
 default-encoding = 
 new-instance-open-target = tab
+new-instance-open-target.window = last-focused
 log-javascript-console = debug
 save-session = true
 session-default-name = 
@@ -170,7 +180,7 @@ url-incdec-segments = path,query
 [ui]
 # General options related to the user interface.
 #
-# zoom-levels (PercList):
+# zoom-levels (List of Perc):
 #     The available zoom levels, separated by commas.
 #     Default:
 #     25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
@@ -261,11 +271,6 @@ url-incdec-segments = path,query
 #     * `{host}`: The host of the current web page.
 #     Default: {perc}{title}{title_sep}qutebrowser
 #
-# hide-mouse-cursor (Bool):
-#     Whether to hide the mouse cursor.
-#     Valid values: true, false
-#     Default: false
-#
 # modal-js-dialog (Bool):
 #     Use standard JavaScript modal dialog for alert() and confirm()
 #     Valid values: true, false
@@ -276,7 +281,7 @@ url-incdec-segments = path,query
 #     Valid values: true, false
 #     Default: false
 #
-# keyhint-blacklist (List):
+# keyhint-blacklist (List of String):
 #     Keychains that shouldn't be shown in the keyhint dialog
 #     Globs are supported, so ';*' will blacklist all keychainsstarting
 #     with ';'. Use '*' to disable keyhints
@@ -297,7 +302,6 @@ remove-finished-downloads = 5000
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
 window-title-format = {perc}{title}{title_sep}qutebrowser
-hide-mouse-cursor = false
 modal-js-dialog = false
 hide-wayland-decoration = true
 keyhint-blacklist = 
@@ -356,8 +360,8 @@ keyhint-blacklist =
 do-not-track = true
 accept-language = en-US,en,fr,ar
 referer-header = same-domain
-user-agent = Mozilla/5.0 (Unknown; Linux x86_64) AppleWebKit/601.2.7 (KHTML, like Gecko) qutebrowser/0.6.2 Safari/601.2.7
-proxy = http://127.0.0.1:3128
+user-agent = 
+proxy = system
 proxy-dns-requests = true
 ssl-strict = false
 dns-prefetch = true
@@ -437,13 +441,13 @@ scrollbar-padding = 2
 # Options related to input modes.
 #
 # timeout (Int):
-#     Timeout for ambiguous key bindings.
+#     Timeout (in milliseconds) for ambiguous key bindings.
 #     If the current input forms both a complete match and a partial
 #     match, the complete match will be executed after this time.
 #     Default: 500
 #
 # partial-timeout (Int):
-#     Timeout for partially typed key bindings.
+#     Timeout (in milliseconds) for partially typed key bindings.
 #     If the current input forms only partial matches, the keystring
 #     will be cleared after this time.
 #     Default: 5000
@@ -684,7 +688,7 @@ indicator-padding = 2,2,0,4
 #     http://webkit.org/blog/427/webkit-page-cache-i-the-basics/
 #     Default:
 #
-# object-cache-capacities (WebKitBytesList):
+# object-cache-capacities (List of WebKitBytes):
 #     The capacities for the global memory cache for dead objects such
 #     as stylesheets or scripts. Syntax: cacheMinDeadCapacity,
 #     cacheMaxDead, totalCapacity.
@@ -762,7 +766,8 @@ cache-size = 52428800
 #     Default: false
 #
 # webgl (Bool):
-#     Enables or disables WebGL.
+#     Enables or disables WebGL. For QtWebEngine, Qt/PyQt >= 5.7 is
+#     required for this setting.
 #     Valid values: true, false
 #     Default: false
 #
@@ -837,7 +842,7 @@ cache-size = 52428800
 #     Valid values: true, false
 #     Default: true
 #
-# host-block-lists (UrlList):
+# host-block-lists (List of Url):
 #     List of URLs of lists which contain hosts to block.
 #     The file can be in one of the following formats:
 #     - An '/etc/hosts'-like file
@@ -852,7 +857,7 @@ cache-size = 52428800
 #     Valid values: true, false
 #     Default: true
 #
-# host-blocking-whitelist (List):
+# host-blocking-whitelist (List of String):
 #     List of domains that should always be loaded, despite being
 #     ad-blocked.
 #     Domains may contain * and ? wildcards and are otherwise required
@@ -937,16 +942,16 @@ enable-pdfjs = true
 #     Default: true
 #
 # auto-follow-timeout (Int):
-#     A timeout to inhibit normal-mode key bindings after a
-#     successfulauto-follow.
+#     A timeout (in milliseconds) to inhibit normal-mode key bindings
+#     after a successful auto-follow.
 #     Default: 0
 #
-# next-regexes (RegexList):
+# next-regexes (List of Regex):
 #     A comma-separated list of regexes to use for 'next' links.
 #     Default:
 #     \bnext\b,\bmore\b,\bnewer\b,\b[>→≫]\b,\b(>>|»)\b,\bcontinue\b
 #
-# prev-regexes (RegexList):
+# prev-regexes (List of Regex):
 #     A comma-separated list of regexes to use for 'prev' links.
 #     Default: \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
 #
@@ -954,7 +959,12 @@ enable-pdfjs = true
 #     Which implementation to use to find elements to hint.
 #         javascript: Better but slower
 #         python: Slightly worse but faster
-#     Default: javascript
+#     Default: python
+#
+# hide-unmatched-rapid-hints (Bool):
+#     Controls hiding unmatched hints in rapid mode.
+#     Valid values: true, false
+#     Default: true
 border = 1px solid #E3BE23
 opacity = 0.7
 mode = letter
@@ -968,6 +978,7 @@ auto-follow-timeout = 0
 next-regexes = \bnext\b,\bmore\b,\bnewer\b,\b[>→≫]\b,\b(>>|»)\b,\bcontinue\b
 prev-regexes = \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
 find-implementation = javascript
+hide-unmatched-rapid-hints = true
 
 [searchengines]
 # Definitions of search engines which can be used via the address bar.
@@ -1369,6 +1380,10 @@ keyhint.bg = rgba(0, 0, 0, 80%)
 #     Font used in the completion widget.
 #     Default: 8pt ${_monospace}
 #
+# completion.category (Font):
+#     Font used in the completion categories.
+#     Default: bold ${completion}
+#
 # tabbar (QtFont):
 #     Font used in the tab bar.
 #     Default: 8pt ${_monospace}
@@ -1434,6 +1449,7 @@ keyhint.bg = rgba(0, 0, 0, 80%)
 #     Default: 8pt ${_monospace}
 _monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
 completion = 8pt ${_monospace}
+completion.category = bold ${completion}
 tabbar = 8pt ${_monospace}
 statusbar = 8pt ${_monospace}
 downloads = 8pt ${_monospace}
