--- a/~/.config/qutebrowser/keys.conf
+++ b/~/.config/qutebrowser/keys.conf
@@ -237,22 +237,22 @@ yank domain
 yank domain -s
     yD
 
-open {clipboard}
+open -- {clipboard}
     pp
 
 paste -s
     pP
 
-open -t {clipboard}
+open -t -- {clipboard}
     Pp
 
-open -t {primary}
+open -t -- {primary}
     PP
 
-open -w {clipboard}
+open -w -- {clipboard}
     wp
 
-open -w {primary}
+open -w -- {primary}
     wP
 
 quickmark-save
@@ -449,7 +449,7 @@ repeat-command
 open-editor
     <ctrl-e>
 
-paste-primary
+insert-text {primary}
     <shift-ins>
 
 [hint]
@@ -510,6 +510,12 @@ command-accept
     <shift-return>
     <enter>
     <shift-enter>
+
+completion-item-focus next-category
+    <ctrl-tab>
+
+completion-item-focus prev-category
+    <ctrl-shift-tab>
 
 [prompt]
 # Keybindings for prompts in the status line.
