update npm & gem & python & zsh & i3 & vim & vimpager & mutt config

--- a/~/.npmrc
+++ b/~/.npmrc
@@ -1,4 +1,5 @@
-prefix = "${HOME}/.node"
+prefix = "${HOME}/.local"
+cache = "${XDG_CACHE_HOME}"
 
 init-author-email = "bmoez.j@gmail.com"
 init-author-name = "Moez Bouhlel"
