--- a/~/.config/modprobed-db.conf
+++ b/~/.config/modprobed-db.conf
@@ -1,4 +1,4 @@
-DBPATH="/home/lejenome/.local/share/"
+DBPATH="$HOME/.local/share/"
 
 # Define the background of your terminal theme here.
 # A setting of dark will produce colors that nicely contrast a dark background.
