update grub & asd & fstab config

--- a/etc/asd.conf
+++ b/etc/asd.conf
@@ -1,16 +1,16 @@
 WHATTOSYNC=(
-	'/mnt/Others/git/dotfiles'
-	'/mnt/Others/git/oh-my-zsh'
-	'/mnt/Others/git/zsh-syntax-highlighting'
-	'/home/lejenome/.config'
-	## '/home/lejenome/.local'
-	'/home/lejenome/.local/share'
+	"/mnt/Others/git/dotfiles"
+	"/mnt/Others/git/oh-my-zsh"
+	"/mnt/Others/git/zsh-syntax-highlighting"
+	"/home/lejenome/.config"
+	## '/home/lejenome/.local"
+	"/home/lejenome/.local/share"
 	"/usr/lib/python3.5/__pycache__"
 	'/home/lejenome/.getmail'
 	'/home/lejenome/mail'
 	# '/home/lejenome/.vimperator/info'
 	# '/home/lejenome/.weechat'
-	'/home/lejenome/.vim'
+	# '/home/lejenome/.vim'
 	'/mnt/Others/git/bin'
 	'/mnt/Others/git/my_scripts'
 )
