update schroot & fstab & npm & zsh & qutebrowser configs

--- a/~/.config/qutebrowser/keys.conf
+++ b/~/.config/qutebrowser/keys.conf
@@ -240,7 +240,7 @@ yank domain -s
 open -- {clipboard}
     pp
 
-paste -s
+open -- {primary}
     pP
 
 open -t -- {clipboard}
@@ -437,6 +437,15 @@ hint inputs
 
 repeat-command
     .
+
+set-cmd-text /
+    /
+
+set-cmd-text ?
+    ?
+
+set-cmd-text :
+    :
 
 [insert]
 # Keybindings for insert mode.
