--- a/etc/schroot/schroot.conf
+++ b/etc/schroot/schroot.conf
@@ -1,27 +1,47 @@
-[Arch32]
-type=directory
+[arch32]
 description=Arch 32bit
 profile=arch
-directory=/opt/arch32
+
+type=btrfs-snapshot
+btrfs-source-subvolume=/opt/arch32
+btrfs-snapshot-directory=/opt/arch32/snapshots
+
+source-groups=users
+source-users=lejenome
+source-root-users=lejenome
+source-root-groups=users
+
 users=lejenome
 groups=users
 root-groups=root
+
 personality=linux32
-aliases=32,default,i686
+aliases=32,default,i686,Arch32
 preserve-environment=true
 shell=/bin/zsh
 
-[Arch64]
-type=directory
+
+[arch64]
 description=Arch 64bit
 profile=arch
-directory=/opt/arch64
+
+type=btrfs-snapshot
+btrfs-source-subvolume=/opt/arch64
+btrfs-snapshot-directory=/opt/arch64/snapshots
+
+source-groups=users
+source-users=lejenome
+source-root-users=lejenome
+source-root-groups=users
+
 users=lejenome
 groups=users
 root-groups=root
-aliases=64,x86_64
+
+aliases=64,x86_64,Arch64
 preserve-environment=true
 shell=/bin/zsh
+
 
 [ubuntu]
 type=block-device
