update fstab & zsh & vim & alsa &mkinitcpio & grub & x11 config

--- a/etc/mkinitcpio.conf
+++ b/etc/mkinitcpio.conf
@@ -1,10 +1,10 @@
-MODULES="ahci sd_mod btrfs radeon"
+MODULES="ahci sd_mod"
 
 BINARIES=""
 
 FILES=""
 
-HOOKS="base udev autodetect modconf block lvm2 filesystems keyboard"
+HOOKS="base udev autodetect modconf block filesystems keyboard"
 
 COMPRESSION="xz"
 COMPRESSION_OPTIONS=""
