--- a/etc/schroot/schroot.conf
+++ b/etc/schroot/schroot.conf
@@ -2,14 +2,9 @@
 description=Arch 32bit
 profile=arch
 
-type=btrfs-snapshot
-btrfs-source-subvolume=/opt/arch32
-btrfs-snapshot-directory=/opt/arch32/snapshots
-
-source-groups=users
-source-users=lejenome
-source-root-users=lejenome
-source-root-groups=users
+type=block-device
+device=/dev/disk/by-label/Arch32
+mount-options=-o async,noatime,commit=360,barrier=0,delalloc
 
 users=lejenome
 groups=users
@@ -25,14 +20,9 @@ shell=/bin/zsh
 description=Arch 64bit
 profile=arch
 
-type=btrfs-snapshot
-btrfs-source-subvolume=/opt/arch64
-btrfs-snapshot-directory=/opt/arch64/snapshots
-
-source-groups=users
-source-users=lejenome
-source-root-users=lejenome
-source-root-groups=users
+type=block-device
+device=/dev/disk/by-label/Arch64
+mount-options=-o async,noatime,commit=360,barrier=0,delalloc
 
 users=lejenome
 groups=users
