update qutebrowser config

--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -38,6 +38,11 @@
 #     The default page(s) to open at the start, separated by commas.
 #     Default: https://duckduckgo.com
 #
+# yank-ignored-url-parameters (List of String):
+#     The URL parameters to strip with :yank url, separated by commas.
+#     Default:
+#     ref,utm_source,utm_medium,utm_campaign,utm_term,utm_content
+#
 # default-page (FuzzyUrl):
 #     The page to open if :open -t/-b/-w is used without URL. Use
 #     `about:blank` for a blank page.
@@ -127,7 +132,9 @@
 #
 # new-instance-open-target.window (String):
 #     Which window to choose when opening links as new tabs.
-#         last-opened: Open new tabs in the last opened window.
+#         first-opened: Open new tabs in the first (oldest) opened
+#     window.
+#         last-opened: Open new tabs in the last (newest) opened window.
 #         last-focused: Open new tabs in the most recently focused
 #     window.
 #         last-visible: Open new tabs in the most recently visible
@@ -158,6 +165,7 @@
 #     Default: path,query
 ignore-case = smart
 startpage = ~/.config/qutebrowser/start-page.html
+yank-ignored-url-parameters = ref,utm_source,utm_medium,utm_campaign,utm_term,utm_content
 default-page = ${startpage}
 auto-search = naive
 auto-save-config = true
@@ -233,7 +241,7 @@ url-incdec-segments = path,query
 #     User stylesheet to use (absolute filename, filename relative to
 #     the config directory or CSS string). Will expand environment
 #     variables.
-#     Default: ::-webkit-scrollbar { width: 0px; height: 0px; }
+#     Default: html > ::-webkit-scrollbar { width: 0px; height: 0px; }
 #
 # css-media-type (String):
 #     Set the CSS media type.
@@ -361,7 +369,7 @@ do-not-track = true
 accept-language = en-US,en,fr,ar
 referer-header = same-domain
 user-agent = 
-proxy = system
+proxy = http://127.0.0.1:3128
 proxy-dns-requests = true
 ssl-strict = false
 dns-prefetch = true
@@ -370,10 +378,12 @@ custom-headers =
 [completion]
 # Options related to completion and command history.
 #
-# auto-open (Bool):
-#     Automatically open completion when typing.
-#     Valid values: true, false
-#     Default: true
+# show (String):
+#     When to show the autocompletion window.
+#         always: Whenever a completion is available.
+#         auto: Whenever a completion is requested.
+#         never: Never.
+#     Default: always
 #
 # download-path-suggestion (String):
 #     What to display in the download filename input.
@@ -385,11 +395,6 @@ custom-headers =
 # timestamp-format (TimestampTemplate):
 #     How to format timestamps (e.g. for history)
 #     Default: %Y-%m-%d
-#
-# show (Bool):
-#     Whether to show the autocompletion window.
-#     Valid values: true, false
-#     Default: true
 #
 # height (PercOrInt):
 #     The height of the completion, in px or as percentage of the
@@ -425,10 +430,9 @@ custom-headers =
 # scrollbar-padding (Int):
 #     Padding of scrollbar handle in completion window (in px).
 #     Default: 2
-auto-open = true
+show = always
 download-path-suggestion = both
 timestamp-format = %Y-%m-%d
-show = true
 height = 50%
 cmd-history-max-items = 100
 web-history-max-items = 3000
@@ -791,8 +795,9 @@ cache-size = 52428800
 #     Valid values: true, false, ask
 #     Default: ask
 #
-# javascript-can-open-windows (Bool):
-#     Whether JavaScript programs can open new windows.
+# javascript-can-open-windows-automatically (Bool):
+#     Whether JavaScript programs can open new windows without user
+#     interaction.
 #     Valid values: true, false
 #     Default: false
 #
@@ -879,7 +884,7 @@ css-regions = true
 hyperlink-auditing = false
 geolocation = ask
 notifications = ask
-javascript-can-open-windows = false
+javascript-can-open-windows-automatically = false
 javascript-can-close-windows = false
 javascript-can-access-clipboard = false
 ignore-javascript-prompt = false
@@ -899,10 +904,6 @@ enable-pdfjs = true
 # border (String):
 #     CSS border value for hints.
 #     Default: 1px solid #E3BE23
-#
-# opacity (Float):
-#     Opacity for hints.
-#     Default: 0.7
 #
 # mode (String):
 #     Mode to use for hints.
@@ -935,11 +936,20 @@ enable-pdfjs = true
 #     The dictionary file to be used by the word hints.
 #     Default: /usr/share/dict/words
 #
-# auto-follow (Bool):
-#     Follow a hint immediately when the hint text is completely
-#     matched.
-#     Valid values: true, false
-#     Default: true
+# auto-follow (String):
+#     Controls when a hint can be automatically followed without the
+#     user pressing Enter.
+#         always: Auto-follow whenever there is only a single hint on a
+#     page.
+#         unique-match: Auto-follow whenever there is a unique non-empty
+#     match in either the hint string (word mode) or filter (number
+#     mode).
+#         full-match: Follow the hint when the user typed the whole hint
+#     (letter, word or number mode) or the element's text (only in
+#     number mode).
+#         never: The user will always need to press Enter to follow a
+#     hint.
+#     Default: unique-match
 #
 # auto-follow-timeout (Int):
 #     A timeout (in milliseconds) to inhibit normal-mode key bindings
@@ -966,14 +976,13 @@ enable-pdfjs = true
 #     Valid values: true, false
 #     Default: true
 border = 1px solid #E3BE23
-opacity = 0.7
 mode = letter
 chars = asdfghjkl
 min-chars = 1
 scatter = true
 uppercase = false
 dictionary = /usr/share/dict/words
-auto-follow = true
+auto-follow = unique-match
 auto-follow-timeout = 0
 next-regexes = \bnext\b,\bmore\b,\bnewer\b,\b[>→≫]\b,\b(>>|»)\b,\bcontinue\b
 prev-regexes = \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
@@ -1224,16 +1233,17 @@ archwiki = https://wiki.archlinux.org/?search={}
 #         none: Don't show a gradient.
 #     Default: rgb
 #
-# hints.fg (CssColor):
+# hints.fg (QssColor):
 #     Font color for hints.
 #     Default: black
 #
-# hints.bg (CssColor):
-#     Background color for hints.
-#     Default: -webkit-gradient(linear, left top, left bottom,
-#     color-stop(0%,#FFF785), color-stop(100%,#FFC542))
+# hints.bg (QssColor):
+#     Background color for hints. Note that you can use a `rgba(...)`
+#     value for transparency.
+#     Default: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255,
+#     247, 133, 0.8), stop:1 rgba(255, 197, 66, 0.8))
 #
-# hints.fg.match (CssColor):
+# hints.fg.match (QssColor):
 #     Font color for the matched part of hints.
 #     Default: green
 #
@@ -1348,7 +1358,7 @@ tabs.indicator.stop = #00aa00
 tabs.indicator.error = #ff0000
 tabs.indicator.system = rgb
 hints.fg = black
-hints.bg = -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFF785), color-stop(100%,#FFC542))
+hints.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255, 247, 133, 0.8), stop:1 rgba(255, 197, 66, 0.8))
 hints.fg.match = green
 downloads.bg.bar = black
 downloads.fg.start = white
@@ -1398,7 +1408,7 @@ keyhint.bg = rgba(0, 0, 0, 80%)
 #
 # hints (Font):
 #     Font used for the hints.
-#     Default: bold 13px Monospace
+#     Default: bold 13px ${_monospace}
 #
 # debug-console (QtFont):
 #     Font used for the debugging console.
@@ -1453,7 +1463,7 @@ completion.category = bold ${completion}
 tabbar = 8pt ${_monospace}
 statusbar = 8pt ${_monospace}
 downloads = 8pt ${_monospace}
-hints = bold 13px Monospace
+hints = bold 13px ${_monospace}
 debug-console = 8pt ${_monospace}
 web-family-standard = 
 web-family-fixed = 
