update git config

--- a/~/.config/git/config
+++ b/~/.config/git/config
@@ -113,6 +113,8 @@
 	syncupstream = "!f() { git fetch upstream; for _b in $(git branch -a |awk 'BEGIN {FS=\"/\"} $2==\"upstream\" {print $3}'); do git checkout $_b && git rebase -s recursive -Xours upstream/$_b $@ || git nb $_b upstream/$_b; done; git checkout master;}; f $@"
 	# Show the diff between the latest commit and the current state
 	dl = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
+	# Create a branch alias to an other
+	ln = !"f() { git symbolic-ref refs/heads/$2 refs/heads/$1; }; f"
 
 	caa = !"git add --all; git commit -am"
 
