--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -9,7 +9,7 @@ conky.config = {
 	override_utf8_locale = true,
 	format_human_readable = true,
 	use_xft = true,
-	if_ip_strictness = 'address',
+	-- if_ip_strictness = 'address',
 	template0 = [[
 ${if_existing /proc/net/route \2}
 	${if_match ${\1speedf \2} < 1000}
@@ -141,7 +141,7 @@ ${endif}
 ${execi 10 ~/.config/i3/aria2c-stat.py }
 
 # Battery: \uf214 \uf0e7
-${if_match ${execi 2 cat /sys/class/power_supply/AC0/online} == 1}
+${if_match ${execi 2 cat /sys/class/power_supply/AC*/online} == 1}
 	{"full_text":"\uF0e7","color":"\#949494","separator":false,"separator_block_width":6},
 ${else}
 	{"full_text":"\uF214","color":"\#949494","separator":false,"separator_block_width":6},
