update qutebrowser & i3 & x11 & newsbeuter config

--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -61,6 +61,7 @@ ${endif}${endif}${endif}
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
 ${template0 down enp9s0}
 ${template0 down wlp8s0}
+${template0 down wlp2s0}
 ${template0 down wlp8s1}
 ${template0 down enp0s26u1u2}
 ${template0 down enp0s20u1}
@@ -72,6 +73,7 @@ ${endif}${endif}${endif}${endif}${endif}
 {"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},
 ${template0 up enp9s0}
 ${template0 up wlp8s0}
+${template0 up wlp2s0}
 ${template0 up wlp8s1}
 ${template0 up enp0s26u1u2}
 ${template0 up enp0s20u1}
