--- a/~/.config/qutebrowser/keys.conf
+++ b/~/.config/qutebrowser/keys.conf
@@ -532,8 +532,8 @@ completion-item-focus prev-category
 # bind special keys.
 # Useful hidden commands to map in this section:
 #  * `prompt-accept`: Confirm the entered value.
-#  * `prompt-yes`: Answer yes to a yes/no question.
-#  * `prompt-no`: Answer no to a yes/no question.
+#  * `prompt-accept yes`: Answer yes to a yes/no question.
+#  * `prompt-accept no`: Answer no to a yes/no question.
 
 prompt-accept
     <return>
@@ -543,10 +543,10 @@ prompt-accept
     <enter>
     <shift-enter>
 
-prompt-yes
+prompt-accept yes
     y
 
-prompt-no
+prompt-accept no
     n
 
 prompt-open-download
