--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -1090,22 +1090,6 @@ archwiki = https://wiki.archlinux.org/?search={}
 #     Background color of the statusbar.
 #     Default: black
 #
-# statusbar.fg.error (QssColor):
-#     Foreground color of the statusbar if there was an error.
-#     Default: ${statusbar.fg}
-#
-# statusbar.bg.error (QssColor):
-#     Background color of the statusbar if there was an error.
-#     Default: red
-#
-# statusbar.fg.warning (QssColor):
-#     Foreground color of the statusbar if there is a warning.
-#     Default: ${statusbar.fg}
-#
-# statusbar.bg.warning (QssColor):
-#     Background color of the statusbar if there is a warning.
-#     Default: darkorange
-#
 # statusbar.fg.prompt (QssColor):
 #     Foreground color of the statusbar if there is a prompt.
 #     Default: ${statusbar.fg}
@@ -1307,6 +1291,42 @@ archwiki = https://wiki.archlinux.org/?search={}
 # keyhint.bg (QssColor):
 #     Background color of the keyhint widget.
 #     Default: rgba(0, 0, 0, 80%)
+#
+# messages.fg.error (QssColor):
+#     Foreground color of an error message.
+#     Default: white
+#
+# messages.bg.error (QssColor):
+#     Background color of an error message.
+#     Default: red
+#
+# messages.border.error (QssColor):
+#     Border color of an error message.
+#     Default: #bb0000
+#
+# messages.fg.warning (QssColor):
+#     Foreground color a warning message.
+#     Default: white
+#
+# messages.bg.warning (QssColor):
+#     Background color of a warning message.
+#     Default: darkorange
+#
+# messages.border.warning (QssColor):
+#     Border color of an error message.
+#     Default: #d47300
+#
+# messages.fg.info (QssColor):
+#     Foreground color an info message.
+#     Default: white
+#
+# messages.bg.info (QssColor):
+#     Background color of an info message.
+#     Default: black
+#
+# messages.border.info (QssColor):
+#     Border color of an info message.
+#     Default: #333333
 completion.fg = white
 completion.bg = #333333
 completion.alternate-bg = #444444
@@ -1323,10 +1343,6 @@ completion.scrollbar.fg = ${completion.fg}
 completion.scrollbar.bg = ${completion.bg}
 statusbar.fg = white
 statusbar.bg = black
-statusbar.fg.error = ${statusbar.fg}
-statusbar.bg.error = red
-statusbar.fg.warning = ${statusbar.fg}
-statusbar.bg.warning = darkorange
 statusbar.fg.prompt = ${statusbar.fg}
 statusbar.bg.prompt = darkblue
 statusbar.fg.insert = ${statusbar.fg}
@@ -1373,6 +1389,15 @@ webpage.bg = white
 keyhint.fg = #FFFFFF
 keyhint.fg.suffix = #FFFF00
 keyhint.bg = rgba(0, 0, 0, 80%)
+messages.fg.error = ${statusbar.fg}
+messages.bg.error = red
+messages.border.error = #bb0000
+messages.fg.warning = ${statusbar.fg}
+messages.bg.warning = darkorange
+messages.border.warning = #d47300
+messages.fg.info = white
+messages.bg.info = black
+messages.border.info = #333333
 
 [fonts]
 # Fonts used for the UI, with optional style/weight/size.
@@ -1457,6 +1482,18 @@ keyhint.bg = rgba(0, 0, 0, 80%)
 # keyhint (Font):
 #     Font used in the keyhint widget.
 #     Default: 8pt ${_monospace}
+#
+# messages.error (Font):
+#     Font used for error messages.
+#     Default: 8pt ${_monospace}
+#
+# messages.warning (Font):
+#     Font used for warning messages.
+#     Default: 8pt ${_monospace}
+#
+# messages.info (Font):
+#     Font used for info messages.
+#     Default: 8pt ${_monospace}
 _monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
 completion = 8pt ${_monospace}
 completion.category = bold ${completion}
@@ -1476,3 +1513,6 @@ web-size-minimum-logical =
 web-size-default = 
 web-size-default-fixed = 
 keyhint = 8pt ${_monospace}
+messages.error = 8pt ${_monospace}
+messages.warning = 8pt ${_monospace}
+messages.info = 8pt ${_monospace}
