update qutebrowser jupyter X11

--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -1009,6 +1009,7 @@ archwiki = https://wiki.archlinux.org/?search={}
 # By default, no aliases are defined. Example which adds a new command
 # `:qtb` to open qutebrowsers website:
 # `qtb = open http://www.qutebrowser.org/`
+speak = spawn -u speak
 
 [colors]
 # Colors used in the UI.
