--- a/~/.config/qutebrowser/keys.conf
+++ b/~/.config/qutebrowser/keys.conf
@@ -281,6 +281,9 @@ set-cmd-text -s :bookmark-load -w
 save
     sf
 
+speak
+    z
+
 set-cmd-text -s :set
     ss
 
@@ -677,3 +680,5 @@ scroll up
 scroll right
     L
 
+speak
+    z
