--- a/etc/squid/squid.conf
+++ b/etc/squid/squid.conf
@@ -17,6 +17,9 @@ acl Safe_ports port 591		# filemaker
 acl Safe_ports port 777		# multiling http
 acl CONNECT method CONNECT
 
+acl ws-servers dstdomain .slack-msgs.com .websocket.org .intercom.io .c9.io floobits.com
+ssl_bump none ws-servers
+
 http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
 http_access allow localhost manager
