--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -369,7 +369,7 @@ do-not-track = true
 accept-language = en-US,en,fr,ar
 referer-header = same-domain
 user-agent = 
-proxy = http://127.0.0.1:3128
+proxy = system
 proxy-dns-requests = true
 ssl-strict = false
 dns-prefetch = true
