--- a/~/.config/i3/config
+++ b/~/.config/i3/config
@@ -198,16 +198,16 @@ workspace "$ws10" output LVDS-1
     bindsym $mod+Shift+ccedilla    move container to workspace "$ws9"
     bindsym $mod+Shift+agrave      move container to workspace "$ws10"
 
-    bindsym $mod+KP_8     exec "amixer set Master 5%+"
-    bindsym $mod+KP_2     exec "amixer set Master 5%-"
-    bindsym $mod+KP_5     exec "mpc toggle"
-    bindsym $mod+KP_6     exec "mpc next"
-    bindsym $mod+KP_4     exec "mpc prev"
-    bindsym $mod+Shift+KP_Up    exec "sudo backlightctl +10"
-    bindsym $mod+Shift+KP_Down  exec "sudo backlightctl -10"
-    bindsym $mod+Shift+KP_Right exec "mpc seek +1"
-    bindsym $mod+Shift+KP_Left  exec "mpc seek -1"
-    bindsym $mod+Shift+KP_Begin exec "mpc stop"
+    bindcode $mod+80     exec "amixer set Master 5%+"
+    bindcode $mod+88     exec "amixer set Master 5%-"
+    bindcode $mod+84     exec "mpc toggle"
+    bindcode $mod+85     exec "mpc next"
+    bindcode $mod+83     exec "mpc prev"
+    bindcode $mod+Shift+80    exec "sudo backlightctl +10"
+    bindcode $mod+Shift+88  exec "sudo backlightctl -10"
+    bindcode $mod+Shift+85 exec "mpc seek +1"
+    bindcode $mod+Shift+83  exec "mpc seek -1"
+    bindcode $mod+Shift+84 exec "mpc stop"
 
 # /usr/include/X11/XF86keysym.h && xmodmap -pke
     bindsym XF86AudioMute exec "amixer set Master toggle"
@@ -253,3 +253,4 @@ for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [window_role="About"] floating enable
 for_window [class="mpv"] floating enable
+for_window [class="Glade-previewer"] floating enable
