--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -59,10 +59,8 @@ ${endif}${endif}${endif}
 
 # Download:
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
-${template0 down enp9s0}
-${template0 down wlp8s0}
+${template0 down enp1s0}
 ${template0 down wlp2s0}
-${template0 down wlp8s1}
 ${template0 down enp0s26u1u2}
 ${template0 down enp0s20u1}
 ${template0 down enp0s20u2}
@@ -71,10 +69,8 @@ ${endif}${endif}${endif}${endif}${endif}
 
 # Upload:
 {"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},
-${template0 up enp9s0}
-${template0 up wlp8s0}
+${template0 up enp1s0}
 ${template0 up wlp2s0}
-${template0 up wlp8s1}
 ${template0 up enp0s26u1u2}
 ${template0 up enp0s20u1}
 ${template0 up enp0s20u2}
@@ -106,8 +102,8 @@ ${if_match ${cpu cpu0} <= 100}
 ${endif}${endif}${endif}
 
 # Weather: \uF3b6 \u376
-{"full_text":"\uF185","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${texeci 120 ~/.config/i3/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
+#{"full_text":"\uF185","color":"\#949494","separator":false,"separator_block_width":6},
+#{"full_text":"${texeci 120 ~/.config/i3/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
 
 # Mail: \uF1fa
 {"full_text":"\uF3e5","color":"\#949494","separator":false,"separator_block_width":6},
@@ -148,14 +144,14 @@ ${if_match ${execi 2 cat /sys/class/power_supply/AC*/online} == 1}
 ${else}
 	{"full_text":"\uF214","color":"\#949494","separator":false,"separator_block_width":6},
 ${endif}
-${if_match ${battery_percent} < 30}
-	{"full_text":"${battery_percent}%","color":"\#924020","separator":false,"separator_block_width":6},
+${if_match ${battery_percent BAT1} < 30}
+	{"full_text":"${battery_percent BAT1}%","color":"\#924020","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${battery_percent} < 70}
-	{"full_text":"${battery_percent}%","color":"\#b27d12","separator":false,"separator_block_width":6},
+${if_match ${battery_percent BAT1} < 70}
+	{"full_text":"${battery_percent BAT1}%","color":"\#b27d12","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${battery_percent} >= 70}
-	{"full_text":"${battery_percent}%","color":"\#909737","separator":false,"separator_block_width":6},
+${if_match ${battery_percent BAT1} >= 70}
+	{"full_text":"${battery_percent BAT1}%","color":"\#909737","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}
 
 # Volume:
