--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -36,7 +36,7 @@
 #
 # startpage (List of String):
 #     The default page(s) to open at the start, separated by commas.
-#     Default: https://duckduckgo.com
+#     Default: https://start.duckduckgo.com
 #
 # yank-ignored-url-parameters (List of String):
 #     The URL parameters to strip with :yank url, separated by commas.
@@ -85,7 +85,8 @@
 # developer-extras (Bool):
 #     Enable extra tools for Web developers.
 #     This needs to be enabled for `:inspector` to work and also adds an
-#     _Inspect_ entry to the context menu.
+#     _Inspect_ entry to the context menu. For QtWebEngine, see
+#     'qutebrowser --help' instead.
 #     Valid values: true, false
 #     Default: false
 #
@@ -237,11 +238,15 @@ url-incdec-segments = path,query
 #     Valid values: true, false
 #     Default: false
 #
-# user-stylesheet (UserStyleSheet):
-#     User stylesheet to use (absolute filename, filename relative to
-#     the config directory or CSS string). Will expand environment
-#     variables.
-#     Default: html > ::-webkit-scrollbar { width: 0px; height: 0px; }
+# user-stylesheet (File):
+#     User stylesheet to use (absolute filename or filename relative to
+#     the config directory). Will expand environment variables.
+#     Default:
+#
+# hide-scrollbar (Bool):
+#     Hide the main scrollbar.
+#     Valid values: true, false
+#     Default: true
 #
 # css-media-type (String):
 #     Set the CSS media type.
@@ -277,6 +282,7 @@ url-incdec-segments = path,query
 #     * `{id}`: The internal window ID of this window.
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
+#     * `{backend}`: Either 'webkit' or 'webengine'
 #     Default: {perc}{title}{title_sep}qutebrowser
 #
 # modal-js-dialog (Bool):
@@ -294,6 +300,15 @@ url-incdec-segments = path,query
 #     Globs are supported, so ';*' will blacklist all keychainsstarting
 #     with ';'. Use '*' to disable keyhints
 #     Default:
+#
+# prompt-radius (Int):
+#     The rounding radius for the edges of prompts.
+#     Default: 8
+#
+# prompt-filebrowser (Bool):
+#     Show a filebrowser in upload/download prompts.
+#     Valid values: true, false
+#     Default: true
 zoom-levels = 25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
 default-zoom = 100%
 downloads-position = top
@@ -303,7 +318,8 @@ message-unfocused = false
 confirm-quit = downloads
 zoom-text-only = false
 frame-flattening = false
-user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
+user-stylesheet = 
+hide-scrollbar = true
 css-media-type = 
 smooth-scrolling = false
 remove-finished-downloads = 5000
@@ -313,6 +329,8 @@ window-title-format = {perc}{title}{title_sep}qutebrowser
 modal-js-dialog = false
 hide-wayland-decoration = true
 keyhint-blacklist = 
+prompt-radius = 8
+prompt-filebrowser = true
 
 [network]
 # Settings related to the network.
@@ -365,15 +383,21 @@ keyhint-blacklist =
 # custom-headers (HeaderDict):
 #     Set custom headers for qutebrowser HTTP requests.
 #     Default:
+#
+# netrc-file (File):
+#     Set location of a netrc-file for HTTP authentication. If empty,
+#     ~/.netrc is used.
+#     Default:
 do-not-track = true
 accept-language = en-US,en,fr,ar
 referer-header = same-domain
 user-agent = 
 proxy = system
-proxy-dns-requests = true
+proxy-dns-requests = false
 ssl-strict = false
 dns-prefetch = true
 custom-headers = 
+netrc-file = 
 
 [completion]
 # Options related to completion and command history.
@@ -527,25 +551,27 @@ mouse-zoom-divider = 512
 #
 # select-on-remove (SelectOnRemove):
 #     Which tab to select when the focused tab is removed.
-#         left: Select the tab on the left.
-#         right: Select the tab on the right.
-#         previous: Select the previously selected tab.
-#     Default: right
+#         prev: Select the tab which came before the closed one (left in
+#     horizontal, above in vertical).
+#         next: Select the tab which came after the closed one (right in
+#     horizontal, below in vertical).
+#         last-used: Select the previously selected tab.
+#     Default: next
 #
 # new-tab-position (NewTabPosition):
 #     How new tabs are positioned.
-#         left: On the left of the current tab.
-#         right: On the right of the current tab.
-#         first: At the left end.
-#         last: At the right end.
-#     Default: right
+#         prev: Before the current tab.
+#         next: After the current tab.
+#         first: At the beginning.
+#         last: At the end.
+#     Default: next
 #
 # new-tab-position-explicit (NewTabPosition):
 #     How new tabs opened explicitly are positioned.
-#         left: On the left of the current tab.
-#         right: On the right of the current tab.
-#         first: At the left end.
-#         last: At the right end.
+#         prev: Before the current tab.
+#         next: After the current tab.
+#         first: At the beginning.
+#         last: At the end.
 #     Default: last
 #
 # last-close (String):
@@ -623,6 +649,7 @@ mouse-zoom-divider = 512
 #     * `{id}`: The internal tab ID of this tab.
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
+#     * `{backend}`: Either 'webkit' or 'webengine'
 #     Default: {index}: {title}
 #
 # title-alignment (TextAlignment):
@@ -643,8 +670,8 @@ mouse-zoom-divider = 512
 #     Padding for indicators (top, bottom, left, right).
 #     Default: 2,2,0,4
 background-tabs = true
-select-on-remove = right
-new-tab-position = right
+select-on-remove = next
+new-tab-position = next
 new-tab-position-explicit = last
 last-close = close
 show = switching
@@ -795,6 +822,11 @@ cache-size = 52428800
 #     Valid values: true, false, ask
 #     Default: ask
 #
+# media-capture (BoolAsk):
+#     Allow websites to record audio/video.
+#     Valid values: true, false, ask
+#     Default: ask
+#
 # javascript-can-open-windows-automatically (Bool):
 #     Whether JavaScript programs can open new windows without user
 #     interaction.
@@ -855,7 +887,7 @@ cache-size = 52428800
 #     - A zip-file of any of the above, with either only one file, or a
 #     file named 'hosts' (with any extension).
 #     Default:
-#     http://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,http://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
+#     https://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
 #
 # host-blocking-enabled (Bool):
 #     Whether host blocking is enabled.
@@ -884,6 +916,7 @@ css-regions = true
 hyperlink-auditing = false
 geolocation = ask
 notifications = ask
+media-capture = ask
 javascript-can-open-windows-automatically = false
 javascript-can-close-windows = false
 javascript-can-access-clipboard = false
@@ -1008,7 +1041,7 @@ archwiki = https://wiki.archlinux.org/?search={}
 # Aliases for commands.
 # By default, no aliases are defined. Example which adds a new command
 # `:qtb` to open qutebrowsers website:
-# `qtb = open http://www.qutebrowser.org/`
+# `qtb = open https://www.qutebrowser.org/`
 speak = spawn -u speak
 
 [colors]
@@ -1090,14 +1123,6 @@ speak = spawn -u speak
 # statusbar.bg (QssColor):
 #     Background color of the statusbar.
 #     Default: black
-#
-# statusbar.fg.prompt (QssColor):
-#     Foreground color of the statusbar if there is a prompt.
-#     Default: ${statusbar.fg}
-#
-# statusbar.bg.prompt (QssColor):
-#     Background color of the statusbar if there is a prompt.
-#     Default: darkblue
 #
 # statusbar.fg.insert (QssColor):
 #     Foreground color of the statusbar in insert mode.
@@ -1328,6 +1353,18 @@ speak = spawn -u speak
 # messages.border.info (QssColor):
 #     Border color of an info message.
 #     Default: #333333
+#
+# prompts.fg (QssColor):
+#     Foreground color for prompts.
+#     Default: white
+#
+# prompts.bg (QssColor):
+#     Background color for prompts.
+#     Default: darkblue
+#
+# prompts.selected.bg (QssColor):
+#     Background color for the selected item in filename prompts.
+#     Default: #308cc6
 completion.fg = white
 completion.bg = #333333
 completion.alternate-bg = #444444
@@ -1344,8 +1381,6 @@ completion.scrollbar.fg = ${completion.fg}
 completion.scrollbar.bg = ${completion.bg}
 statusbar.fg = white
 statusbar.bg = black
-statusbar.fg.prompt = ${statusbar.fg}
-statusbar.bg.prompt = darkblue
 statusbar.fg.insert = ${statusbar.fg}
 statusbar.bg.insert = darkgreen
 statusbar.fg.command = ${statusbar.fg}
@@ -1399,6 +1434,9 @@ messages.border.warning = #d47300
 messages.fg.info = white
 messages.bg.info = black
 messages.border.info = #333333
+prompts.fg = ${statusbar.fg}
+prompts.bg = darkblue
+prompts.selected.bg = #308cc6
 
 [fonts]
 # Fonts used for the UI, with optional style/weight/size.
@@ -1495,6 +1533,10 @@ messages.border.info = #333333
 # messages.info (Font):
 #     Font used for info messages.
 #     Default: 8pt ${_monospace}
+#
+# prompts (Font):
+#     Font used for prompts.
+#     Default: 8pt sans-serif
 _monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
 completion = 8pt ${_monospace}
 completion.category = bold ${completion}
@@ -1517,3 +1559,4 @@ keyhint = 8pt ${_monospace}
 messages.error = 8pt ${_monospace}
 messages.warning = 8pt ${_monospace}
 messages.info = 8pt ${_monospace}
+prompts = 8pt sans-serif
