--- a/~/.config/mpd/mpd.conf
+++ b/~/.config/mpd/mpd.conf
@@ -16,13 +16,15 @@ restore_paused			"yes"
 
 audio_output {
 	type		"alsa"
-	name             "HDA Intel PCH - ALC269VC Analog"
+	name             "CX20757 Analog : CX20757 Analog : playback 1 : capture 1"
 	auto_channels	"no"
 	auto_format	"no"
 	auto_resample	"no"
+	buffer_time     "2000000"
+	period_time     "50000"
 }
 
-auto_update_depth "2"
+auto_update_depth "5"
 
 replaygain			"album"
 mixer_type			"none"
