--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -61,6 +61,10 @@ Host github.com
   Hostname ssh.github.com
   User git
   Port 443
+Host gist.github.com
+  Hostname ssh.github.com
+  User git
+  Port 443
 Host bitbucket.org
   Hostname altssh.bitbucket.org
   User git
