update git & qutebrowser & vim & zsh config

--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -401,7 +401,7 @@ accept-language = en-US,en,fr,ar
 referer-header = same-domain
 user-agent = 
 proxy = system
-proxy-dns-requests = false
+proxy-dns-requests = true
 ssl-strict = false
 dns-prefetch = true
 custom-headers = 
