update laptop-mode conf

--- a/etc/laptop-mode/conf.d/cpuhotplug.conf
+++ b/etc/laptop-mode/conf.d/cpuhotplug.conf
@@ -13,7 +13,7 @@
 #__COMMENT This can be very useful if your use does not involve CPU intensive
 #__COMMENT tasks, while on battery
 #__COMMENT
-#__COMMENT IMPORTANT: This feature is NOT enabled by default
+#__COMMENT IMPORTANT: This feature may break Linux Software Suspend
 #__COMMENT
 #__COMMENT Enalbe it only if you understand what you are doing
 #
@@ -29,6 +29,19 @@ DEBUG=0
 # Set to 0 to disable
 CONTROL_CPU_HOTPLUG=1
 
+#
+# How many cores to disable. This setting defines how many CPU cores should be
+# disabled.
+#
+# Possible values are:
+# half -> disable half of available logical CPUs
+# quarter -> disable 1/4 of available logical CPUs
+# 3quarter -> disable 3/4 of available logical CPUs
+#
+# integer -> Set this to a user specific number
+# list of cpu<integer>-s -> Disable specific CPUs. Example: "cpu1 cpu3"
+#
+DISABLE_AVAILABLE_CPU="3quarter"
 
 # Conditions under which to enable CPU Hot Plugging, i.e. shutdown of the CPU 
 BATT_CPU_HOTPLUG=1
