--- a/etc/laptop-mode/conf.d/eee-superhe.conf
+++ b/etc/laptop-mode/conf.d/eee-superhe.conf
@@ -20,7 +20,7 @@ DEBUG=0
 # Control FSB speed. Requires eeepc_laptop kernel module loaded.
 # Set to 0 to disable.
 #
-CONTROL_SUPERHE="auto"
+CONTROL_SUPERHE=0
  
 # 2 is powersave
 # 1 is normal
