--- a/etc/laptop-mode/conf.d/hal-polling.conf
+++ b/etc/laptop-mode/conf.d/hal-polling.conf
@@ -35,4 +35,4 @@ BATT_DISABLE_HAL_POLLING=1
 AC_DISABLE_HAL_POLLING=0
 
 # Drives to apply HAL polling settings to
-HAL_POLLING_DEVICES="/dev/scd?"
+HAL_POLLING_DEVICES="/dev/sr?"
