--- a/etc/laptop-mode/conf.d/sched-mc-power-savings.conf
+++ b/etc/laptop-mode/conf.d/sched-mc-power-savings.conf
@@ -22,5 +22,5 @@ DEBUG=0
 
 # Control multi-core power-saving tunables for the process scheduler?
 # Set to 0 to disable
-CONTROL_SCHED_MC_POWER_SAVINGS="auto"
+CONTROL_SCHED_MC_POWER_SAVINGS=1
 
