--- a/etc/laptop-mode/conf.d/terminal-blanking.conf
+++ b/etc/laptop-mode/conf.d/terminal-blanking.conf
@@ -34,7 +34,7 @@ CONTROL_TERMINAL="auto"
 # Terminal device files that should be affected. (One terminal is enough, this
 # affects all consoles. )
 #
-TERMINALS="/dev/tty1"
+TERMINALS="/dev/tty?"
 
 
 #
@@ -45,8 +45,8 @@ TERMINALS="/dev/tty1"
 # 1 to 60 minutes, or 0 to disable.
 #
 BATT_TERMINAL_BLANK_MINUTES=1
-BATT_TERMINAL_POWERDOWN_MINUTES=2
+BATT_TERMINAL_POWERDOWN_MINUTES=0
 LM_AC_TERMINAL_BLANK_MINUTES=10
-LM_AC_TERMINAL_POWERDOWN_MINUTES=10
+LM_AC_TERMINAL_POWERDOWN_MINUTES=1
 NOLM_AC_TERMINAL_BLANK_MINUTES=10
-NOLM_AC_TERMINAL_POWERDOWN_MINUTES=10
+NOLM_AC_TERMINAL_POWERDOWN_MINUTES=1
