--- a/etc/laptop-mode/conf.d/video-out.conf
+++ b/etc/laptop-mode/conf.d/video-out.conf
@@ -21,10 +21,10 @@
 DEBUG=0
 
 # Control video output settings?
-CONTROL_VIDEO_OUTPUTS=0
+CONTROL_VIDEO_OUTPUTS="auto"
 
 # Display types to disable in various modes. Run "xrandr" to check which outputs
 # are available. Make sure that you do not list your primary display here!
-BATT_DISABLE_VIDEO_OUTPUTS="HDMI VGA VGA-0 HDMI-0 HDMI-A-1 VGA-1"
-LM_AC_DISABLE_VIDEO_OUTPUTS="HDMI VGA"
+BATT_DISABLE_VIDEO_OUTPUTS="HDMI VGA VGA-0 HDMI-0 HDMI-A-1 VGA-1 HDMI1 DP1 VIRTUAL1 VGA1"
+LM_AC_DISABLE_VIDEO_OUTPUTS=""
 NOLM_AC_DISABLE_VIDEO_OUTPUTS=""
