update x11 & makepkg & samba config

--- a/etc/makepkg.conf
+++ b/etc/makepkg.conf
@@ -49,7 +49,7 @@ BUILDENV=(fakeroot !distcc color !ccache check !sign)
 #DISTCC_HOSTS=""
 #
 #-- Specify a directory for package building.
-BUILDDIR=/tmp/makepkg
+BUILDDIR=/tmp/makepkg-${USER}
 
 #########################################################################
 # GLOBAL PACKAGE OPTIONS
@@ -101,7 +101,7 @@ SRCPKGDEST=/home/cache/makepkg-srcpackages
 #-- Log files: specify a fixed directory where all log files will be placed
 LOGDEST=/home/cache/makepkg-logs
 #-- Packager: name/email of the person or organization building packages
-PACKAGER="Moez Bouhlel <bmoez.j@gmail.com>"
+PACKAGER="${NAME} <${EMAIL}>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
