--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -32,8 +32,18 @@
     guest only = Yes
     guest ok = Yes
 
-[archive]
-    path = /mnt/Others/archives
+[python]
+    path = /mnt/Others/shared/python
+    guest ok = Yes
+    guest only = Yes
+
+[html]
+    path = /mnt/Others/shared/html
+    guest ok = Yes
+    guest only = Yes
+
+[cisco]
+    path = /mnt/Others/shared/cisco
     guest ok = Yes
     guest only = Yes
 
@@ -41,6 +51,11 @@
     path = /mnt/Others/searchs
     guest only = Yes
     guest ok = Yes
+
+[archive]
+    path = /mnt/Others/archives
+    guest ok = No
+    guest only = Yes
 
 [music]
     path = /mnt/Others/Music
@@ -62,8 +77,8 @@
     read only = Yes
     browseable = No
 
-[danger]
-    path = /tmp/danger
+[upload]
+    path = /mnt/Others/shared/upload
     browseable = No
     public = Yes
     guest ok = Yes
