--- a/etc/X11/xorg.conf.d/30-touchpad.conf
+++ b/etc/X11/xorg.conf.d/30-touchpad.conf
@@ -1,6 +1,7 @@
 Section "InputClass"
 	Identifier "touchpad"
-	MatchIsTouchpad "on"
+        MatchIsTouchpad "on"
+        MatchDevicePath "/dev/input/event*"
 	Driver "libinput"
 	Option "Tapping" "on"
 EndSection
