--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -61,21 +61,17 @@ ${endif}${endif}${endif}
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
 ${template0 down enp1s0}
 ${template0 down wlp2s0}
-${template0 down enp0s26u1u2}
-${template0 down enp0s20u1}
-${template0 down enp0s20u2}
+${template0 down enp0s1u1}
 {"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
-${endif}${endif}${endif}${endif}${endif}
+${endif}${endif}${endif}
 
 # Upload:
 {"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},
 ${template0 up enp1s0}
 ${template0 up wlp2s0}
-${template0 up enp0s26u1u2}
-${template0 up enp0s20u1}
-${template0 up enp0s20u2}
+${template0 up enp0s1u1}
 {"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
-${endif}${endif}${endif}${endif}${endif}
+${endif}${endif}${endif}
 
 # Memory: \uF30d \uF00A \uf233 \uF3FE
 {"full_text":"\uF30d","color":"\#949494","separator":false,"separator_block_width":6},
