--- a/~/.config/newsbeuter/config
+++ b/~/.config/newsbeuter/config
@@ -1,6 +1,6 @@
 browser "${BROWSER} %u 2>/dev/null"
 download-full-page no
-# html-renderer "w3m -dump -T text/html"
+html-renderer "w3m -dump -T text/html -o display_link_number=1 -o display_borders=1 -o fold_textarea=1 -o display_ins_del=1 -o color=1 -s"
 # pager vimpager
 reload-threads 10
 auto-reload yes
