--- a/etc/mkinitcpio-lts.conf
+++ b/etc/mkinitcpio-lts.conf
@@ -33,7 +33,7 @@ FILES=""
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS="base udev autodetect modconf block filesystems keyboard"
+HOOKS="base systemd autodetect modconf block keyboard sd-vconsole fsck filesystems"
 #HOOKS="base" # udev autodetect modconf block filesystems keyboard
 
 # COMPRESSION
