--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -681,7 +681,7 @@ background-tabs = true
 select-on-remove = next
 new-tab-position = next
 new-tab-position-explicit = last
-last-close = close
+last-close = startpage
 show = switching
 show-switching-delay = 800
 wrap = true
@@ -923,14 +923,14 @@ webgl = true
 css-regions = true
 hyperlink-auditing = false
 geolocation = ask
-notifications = ask
+notifications = true
 media-capture = ask
 javascript-can-open-windows-automatically = false
 javascript-can-close-windows = false
 javascript-can-access-clipboard = false
 ignore-javascript-prompt = false
 ignore-javascript-alert = false
-local-content-can-access-remote-urls = false
+local-content-can-access-remote-urls = true
 local-content-can-access-file-urls = true
 cookies-accept = no-3rdparty
 cookies-store = true
