--- a/~/.config/gtk-2.0/gtkfilechooser.ini
+++ b/~/.config/gtk-2.0/gtkfilechooser.ini
@@ -1,11 +1,11 @@
 [Filechooser Settings]
 LocationMode=filename-entry
-ShowHidden=true
+ShowHidden=false
 ShowSizeColumn=true
-GeometryX=0
-GeometryY=0
+GeometryX=298
+GeometryY=37
 GeometryWidth=770
-GeometryHeight=708
+GeometryHeight=712
 SortColumn=modified
-SortOrder=ascending
+SortOrder=descending
 StartupMode=recent
